# thyself-macos

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  com.thyself.weekly-sync.plist  config.py  extract_whatsapp.py  import_whatsapp.py  make_session_pdf.py  requirements.txt
.cursor/rules/: extraction-format-redesign.md  thyself.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon-dev.icns  icon-prod.icns  icon.icns
app/src-tauri/src/: claude.rs  clipboard_mac.rs  commands.rs  datarep_client.rs  db.rs  dev_server.rs  lib.rs  loader.rs  main.rs  onboarding_tools.rs  profiles.rs  sessions.rs  tools.rs
app/src/components/: AgentResponse.tsx  ChatView.tsx  CodeBlock.tsx  DataSourceGrid.tsx  FeedbackModal.tsx  InputBox.tsx  MentionDropdown.tsx  MessageList.tsx  OnboardingWelcome.tsx  PortraitBuildPanel.tsx  (+12 more)
app/test/: costa_rica_session_script.json
corrections/: resolve_persons.py  summarize_relationships.py
extraction/: ingest_results.py  ingest_synthesis.py  portrait_build.py  prepare.py  prompt.py  run.py  schema.py  synthesize.py
ingest/: chatgpt.py  gmail.py  gmail_auth.py  import_contacts.py
splash/: index.html
sync/: gmail_authenticate.py  gmail_sync.py  imessage_sync.py  install.py  run.py  run_datarep.py  run_sync.sh  whatsapp_desktop_sync.py  whatsapp_web_extract.js  whatsapp_web_sync.py
workers/api/: package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
workers/feedback/: README.md  index.ts  wrangler.toml
(+14 files in other folders)
