[package]
name = "thyself"
version = "0.1.0"
description = "Thyself — Personal Life Intelligence"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dotenv = "0.15"
dirs = "6"
glob = "0.3"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
plist = "1"
rand = "0.9"
